--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.WanAndroid" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/purple_700</item>
-    </style>
-
-    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+    <style name="Theme.App" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/color_blue</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/image_holder</item>
         <item name="windowSplashScreenAnimationDuration">800</item>
-        <item name="postSplashScreenTheme">@style/Theme.WanAndroid</item>
+        <item name="postSplashScreenTheme">@android:style/Theme.Material.NoActionBar</item>
     </style>
 
 </resources>
