--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="Theme.App" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/color_blue</item>
+        <item name="windowSplashScreenBackground">@color/color_green</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/image_holder</item>
         <item name="windowSplashScreenAnimationDuration">800</item>
         <item name="postSplashScreenTheme">@android:style/Theme.Material.NoActionBar</item>
